<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/baseline_map_24"
            android:checked="true"
            android:title="@string/menu_activity_map" />

        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/menu_activity_login" />
    </group>
</menu>